--- a/youdaonote/uwsgi.ini
+++ b/youdaonote/uwsgi.ini
@@ -1,16 +1,18 @@
-
-# file: 项目文件夹/uwsgi.ini
-# 如: mywebsite1/uwsgi.ini
 [uwsgi]
+master = true
 # 套接字方式的 IP地址:端口号
 # socket=127.0.0.1:8000
 # Http通信方式的 IP地址:端口号
 #http=176.140.6.21:8000
-socket=176.140.6.21:8000
+socket=127.0.0.1:8000
 # 项目当前工作目录
 chdir=/home/qiaozan/youdaonote
 # 项目中wsgi.py文件的目录，相对于当前工作目录
 wsgi-file=youdaonote/wsgi.py
+
+stats=%(chdir)/uwsgi/uwsgi.status
+
+pidfile=%(chdir)/uwsgi/uwsgi.pid
 # 进程个数
 process=4
 # 每个进程的线程个数
